# pairwise-llm-eval

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pairwise_llm_eval/: __init__.py  assessor.py  bias.py  cli.py  forgetting.py  general_questions.json  reporting.py  statistics.py
src/pairwise_llm_eval/providers/: __init__.py  base.py  database.py  jsonl.py  memory.py
tests/: conftest.py  test_assessor.py  test_bias.py  test_forgetting.py  test_providers.py  test_reporting.py  test_statistics.py
tests/fixtures/: sample_questions.jsonl
